qt/gen_qbuttongroup.h

class QAbstractButton;
class QButtonGroup;
class QMetaObject;
class QObject;
typedef struct QAbstractButton QAbstractButton;
typedef struct QButtonGroup QButtonGroup;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
QButtonGroup* QButtonGroup_new();
QButtonGroup* QButtonGroup_new2(QObject* parent);
QMetaObject* QButtonGroup_metaObject(const QButtonGroup* self);
void* QButtonGroup_metacast(QButtonGroup* self, const char* param1);
int QButtonGroup_metacall(QButtonGroup* self, int param1, int param2, void** param3);
struct miqt_string QButtonGroup_tr(const char* s);
struct miqt_string QButtonGroup_trUtf8(const char* s);
void QButtonGroup_setExclusive(QButtonGroup* self, bool exclusive);
bool QButtonGroup_exclusive(const QButtonGroup* self);
void QButtonGroup_addButton(QButtonGroup* self, QAbstractButton* param1);
void QButtonGroup_removeButton(QButtonGroup* self, QAbstractButton* param1);
struct miqt_array /* of QAbstractButton* */  QButtonGroup_buttons(const QButtonGroup* self);
QAbstractButton* QButtonGroup_checkedButton(const QButtonGroup* self);
QAbstractButton* QButtonGroup_button(const QButtonGroup* self, int id);
void QButtonGroup_setId(QButtonGroup* self, QAbstractButton* button, int id);
int QButtonGroup_id(const QButtonGroup* self, QAbstractButton* button);
int QButtonGroup_checkedId(const QButtonGroup* self);
void QButtonGroup_buttonClicked(QButtonGroup* self, QAbstractButton* param1);
void QButtonGroup_connect_buttonClicked(QButtonGroup* self, intptr_t slot);
void QButtonGroup_buttonPressed(QButtonGroup* self, QAbstractButton* param1);
void QButtonGroup_connect_buttonPressed(QButtonGroup* self, intptr_t slot);
void QButtonGroup_buttonReleased(QButtonGroup* self, QAbstractButton* param1);
void QButtonGroup_connect_buttonReleased(QButtonGroup* self, intptr_t slot);
void QButtonGroup_buttonToggled(QButtonGroup* self, QAbstractButton* param1, bool param2);
void QButtonGroup_connect_buttonToggled(QButtonGroup* self, intptr_t slot);
void QButtonGroup_idClicked(QButtonGroup* self, int param1);
void QButtonGroup_connect_idClicked(QButtonGroup* self, intptr_t slot);
void QButtonGroup_idPressed(QButtonGroup* self, int param1);
void QButtonGroup_connect_idPressed(QButtonGroup* self, intptr_t slot);
void QButtonGroup_idReleased(QButtonGroup* self, int param1);
void QButtonGroup_connect_idReleased(QButtonGroup* self, intptr_t slot);
void QButtonGroup_idToggled(QButtonGroup* self, int param1, bool param2);
void QButtonGroup_connect_idToggled(QButtonGroup* self, intptr_t slot);
void QButtonGroup_buttonClickedWithInt(QButtonGroup* self, int param1);
void QButtonGroup_connect_buttonClickedWithInt(QButtonGroup* self, intptr_t slot);
void QButtonGroup_buttonPressedWithInt(QButtonGroup* self, int param1);
void QButtonGroup_connect_buttonPressedWithInt(QButtonGroup* self, intptr_t slot);
void QButtonGroup_buttonReleasedWithInt(QButtonGroup* self, int param1);
void QButtonGroup_connect_buttonReleasedWithInt(QButtonGroup* self, intptr_t slot);
void QButtonGroup_buttonToggled2(QButtonGroup* self, int param1, bool param2);
void QButtonGroup_connect_buttonToggled2(QButtonGroup* self, intptr_t slot);
struct miqt_string QButtonGroup_tr2(const char* s, const char* c);
struct miqt_string QButtonGroup_tr3(const char* s, const char* c, int n);
struct miqt_string QButtonGroup_trUtf82(const char* s, const char* c);
struct miqt_string QButtonGroup_trUtf83(const char* s, const char* c, int n);
void QButtonGroup_addButton2(QButtonGroup* self, QAbstractButton* param1, int id);
bool QButtonGroup_override_virtual_metacall(void* self, intptr_t slot);
int QButtonGroup_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QButtonGroup_override_virtual_event(void* self, intptr_t slot);
bool QButtonGroup_virtualbase_event(void* self, QEvent* event);
bool QButtonGroup_override_virtual_eventFilter(void* self, intptr_t slot);
bool QButtonGroup_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QButtonGroup_override_virtual_timerEvent(void* self, intptr_t slot);
void QButtonGroup_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QButtonGroup_override_virtual_childEvent(void* self, intptr_t slot);
void QButtonGroup_virtualbase_childEvent(void* self, QChildEvent* event);
bool QButtonGroup_override_virtual_customEvent(void* self, intptr_t slot);
void QButtonGroup_virtualbase_customEvent(void* self, QEvent* event);
bool QButtonGroup_override_virtual_connectNotify(void* self, intptr_t slot);
void QButtonGroup_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QButtonGroup_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QButtonGroup_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QButtonGroup_staticMetaObject();
void QButtonGroup_delete(QButtonGroup* self);